--- a/index.html
+++ b/index.html
@@ -52,5 +52,29 @@
       </div>
       <div class="illustration"></div>
     </main>
+
+    <footer class="footer">
+      <picture class="footer__logo-box">
+        <h2 class="">Foodies</h2>
+        <img src="./img/logo-1.png" class="footer__logo" alt="food-logo" />
+        <h2>Restaurant</h2>
+      </picture>
+      <div class="footer__main">
+        <div class="footer__left">
+          <span>Follow Us At </span>
+          <span>Twiiter</span>
+          <span>Facebook</span>
+          <span>Instagram</span>
+          <span>Github</span>
+        </div>
+        <div class="footer__right">
+          <span>
+            This Website is developed by @SangyeTashi for his personal web
+            portfolio, Use of the design for any personal and commercial use
+            should be done with proper credit and permission.
+          </span>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
