--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <section class="popup" id="popup">
       <div class="popup__content">
-        <span class="btn--close"><a href="#navigation">x</a></span>
+        <span class="btn--close"><a href="#navigation">&times</a></span>
         <div class="card">
           <div class="card-child bg-1">
             Breakfast starting from 9 am till 11 am
