--- a/index.html
+++ b/index.html
@@ -1,80 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foodies</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <section class="popup" id="popup">
-      <div class="popup__content">
-        <span class="btn--close"><a href="#navigation">&times</a></span>
-        <div class="card">
-          <div class="card-child bg-1">
-            Breakfast starting from 9 am till 11 am
-          </div>
-          <button class="btn--order">Order Now</button>
-        </div>
-        <div class="card">
-          <div class="card-child bg-2">Lunch Starting 11 am till 5 pm</div>
-          <button class="btn--order">Order now</button>
-        </div>
-        <div class="card">
-          <div class="card-child bg-3">
-            Dinner reservations starting 5pm till 12am
-          </div>
-          <button class="btn--order">Order Now</button>
-        </div>
-      </div>
-    </section>
-    <nav class="navigation" id="navigation">
-      <picture class="logo-box">
-        <img src="./img/logo-1.png" class="logo" alt="food-logo" />
-        <h2>Foodies</h2>
-      </picture>
-      <ul class="nav-list">
-        <li>Home</li>
-        <li>Menu</li>
-        <li>Order</li>
-        <li>Reservations</li>
-      </ul>
-    </nav>
-    <main class="content" id="content">
-      <div class="discriptions">
-        <div class="discription-box">
-          <h1 class="header-1">The Foodies</h1>
-          <h2 class="header-2">
-            A place to create your memories with your family, never miss a bite
-          </h2>
-          <a href="#popup" class="btn">Book Now</a>
-        </div>
-      </div>
-      <div class="illustration"></div>
-    </main>
 
-    <footer class="footer">
-      <picture class="footer__logo-box">
-        <h2 class="">Foodies</h2>
-        <img src="./img/logo-1.png" class="footer__logo" alt="food-logo" />
-        <h2>Restaurant</h2>
-      </picture>
-      <div class="footer__main">
-        <div class="footer__left">
-          <span>Follow Us At </span>
-          <span>Twiiter</span>
-          <span>Facebook</span>
-          <span>Instagram</span>
-          <span>Github</span>
-        </div>
-        <div class="footer__right">
-          <span>
-            This Website is developed by @SangyeTashi for his personal web
-            portfolio, Use of the design for any personal and commercial use
-            should be done with proper credit and permission.
-          </span>
-        </div>
-      </div>
-    </footer>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sangye Tashi</title>
+
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+    <div class="container">
+        <section class="nav-bar">
+            <div class="profile">
+                <div class="profile-picture">
+                </div>
+                <h2 class="name">Sangye Tashi</h2>
+            </div>
+            <ul class="nav-list ">
+                <li class="nav-items">
+                    <h2>About Me</h2>
+                </li>
+                <li class="nav-items">
+                    <h2>My Works</h2>
+                </li>
+                <li class="nav-items">
+                    <h2>Contact</h2>
+                </li>
+            </ul>
+        </section>
+    </div>
+    <button>hi</button>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./app.js"></script>
+</body>
+
 </html>
