--- a/index.html
+++ b/index.html
@@ -6,33 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sangye Tashi</title>
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
-    <div class="container">
-        <section class="nav-bar">
+    <nav class="nav">
+        <div class="container">
             <div class="profile">
-                <div class="profile-picture">
+                <div class="profile__picture">
                 </div>
-                <h2 class="name">Sangye Tashi</h2>
+                <h1 class="profile__name">Sangye Tashi</h1>
             </div>
-            <ul class="nav-list ">
-                <li class="nav-items">
-                    <h2>About Me</h2>
-                </li>
-                <li class="nav-items">
-                    <h2>My Works</h2>
-                </li>
-                <li class="nav-items">
-                    <h2>Contact</h2>
-                </li>
-            </ul>
-        </section>
-    </div>
-    <button>hi</button>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="./app.js"></script>
+            <div id="navbar__nav" class="  ">
+                <ul class="nav__list ">
+                    <li class="nav__items ">
+                        <h2>About Me</h2>
+                    </li>
+                    <li class="nav__items ">
+                        <h2>My Works</h2>
+                    </li>
+                    <li class="nav__items ">
+                        <h2>Contact</h2>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section id="a">
+        <div></div>
+    </section>
+    <button type="button ">hi</button>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
+    <script src="./app.js "></script>
 </body>
 
 </html>
